tests/errors/semantic/E006_base.zy
# E006_base {
    #> { real_fn }

    real_fn() { <~ "real" }
}
